--- a/demo-backend-api/pom.xml
+++ b/demo-backend-api/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>springdoc-openapi-kotlin</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
+
+		<!-- REDIS: -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
